# ZVIC

./: .cache_import_scan.py  .debug_inspect_ast.py  .debug_show_annotation.py  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md  testing.instructions.md
.github/workflows/: publish.yml
docs/: llms.md
docs/scrum/: 2025-27.md  2025-28.md  2025-34.md  README.md
docs/specs/: spec-01-Introduction.md  spec-02-SDFP-Principles.md  spec-03-ZVIC-Contracts.md  spec-04-Canonicalization-Compatibility.md  spec-05-Contract-Diff-Visualization.md  spec-06-Error-Visualization.md  spec-07-Annotation-Constraints.md  spec-07-Annotation-Rewriting.md  spec-08-Compatibility.md  spec-08-Test-Plan.md
examples/: run_cidstore_smoke.py  run_spec08_examples.py
llm_playground/: __init__.py  debug_show_annotation.py  demo_no_patch.py  demo_patch_refs.py  holder_mod.py  run_test.py  sample_mod.py
llm_workshop/: discover_zvic_transformers.py  run_transform_from_zvic.py  transform_replace.py
src/zvic/: __init__.py  annotation_constraints.py  ast_utils.py  compatibility.py  compatibility_constraints.py  compatibility_new.py  compatibility_params.py  compatibility_types.py  crosshair_subprocess.py  exception.py  import_hook.py  main.py  transform_replace.py  type_normalization.py  utils.py
tests/: conftest.py  tdd_test.py  test.py  test_.py  test_annotation_constraints.py  test_annotation_constraints_containers.py  test_edge_cases.py  test_mod_a_b.py  test_sanity.py  test_spec08_compatibility.py  transformed_code.py
(+41 files in other folders)
