[project]
name = "zvic"
version = "2025.27"
description = "Zero-Version Interface Contracts (ZVIC) - signature-based compatibility for Python modules."
authors = [
    { name = "Anselm Kiefner" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"